...
    }
    
    // MARK: View
    
    override func loadView() {
        if deck == nil {
            title = "New Deck"
        }
        else {
            title = "Edit Deck"
        }
        
        view = UIView(frame: .zero)
        view.backgroundColor = .systemBackground
        
        let layout = EZLayout(spacing: 16)
...
        let updateTitleField: TitleField.UpdateHandler = { value in
            self.fields.title = value
            self.updateSaveButton()
        }
        let titleField = TitleField(labelText: "Title:", placeholder: "Title", initial: self.fields.title, onUpdate: updateTitleField)
        titleField.translatesAutoresizingMaskIntoConstraints = false
        titleField.textField.accessibilityIdentifier = "DeckTitleField"
        titleField.textField.accessibilityLabel = "Deck Title"
        layout.addArrangedSubview(titleField, spacing: 24)
        
        
        // Description field
        let updateDescriptionField: MultilineTextFieldWithLabel.UpdateHandler = { value in
            self.fields.deckDescription = value
            self.updateSaveButton()
        }
        let descriptionView = MultilineTextFieldWithLabel(labelText: "About:", initial: self.fields.deckDescription, onUpdate: updateDescriptionField)
        descriptionView.translatesAutoresizingMaskIntoConstraints = false
        descriptionView.textView.accessibilityIdentifier = "DeckAboutField"
        descriptionView.textView.accessibilityLabel = "About this Deck"
        layout.addArrangedSubview(descriptionView)
        layout.addSeparator()
        
        
        // NewCardsPerDay field
...
            self.fields.newCardsPerDay = value
            self.updateSaveButton()
        }
        let newCardsPerDayView = StepperField(labelText: "New Cards / Day:", initial: self.fields.newCardsPerDay, onUpdate: newCardsPerDayAction)
        newCardsPerDayView.translatesAutoresizingMaskIntoConstraints = false
        newCardsPerDayView.stepper.accessibilityLabel = "Number of new cards per day"
        newCardsPerDayView.stepper.accessibilityIdentifier = "NewCardsPerDayStepper"
        layout.addArrangedSubview(newCardsPerDayView)
        
        
        // ReviewCardsPerDay field
        let reviewCardsPerDayAction: StepperField.UpdateHandler = { value in
            self.fields.reviewCardsPerDay = value
            self.updateSaveButton()
        }
        let reviewCardsPerDayView = StepperField(labelText: "Review Cards / Day:", initial: self.fields.reviewCardsPerDay, onUpdate: reviewCardsPerDayAction)
        reviewCardsPerDayView.translatesAutoresizingMaskIntoConstraints = false
        reviewCardsPerDayView.stepper.accessibilityLabel = "Number of review cards per day"
        reviewCardsPerDayView.stepper.accessibilityIdentifier = "ReviewCardsPerDayStepper"
        layout.addArrangedSubview(reviewCardsPerDayView)
        
        layout.addSeparator()
        
        
        // Associated ContentPacks
...
            let vc = ContentPackSelectorViewController(flashCardService: self.flashCardService, selectionHandler: updateHandler, selectedContentPacks: self.fields.associatedContentPacks)
            self.show(vc, sender: self)
        }
        
        let addButton = UIButton(primaryAction: addButtonAction)
        addButton.translatesAutoresizingMaskIntoConstraints = false
        addButton.accessibilityIdentifier = "AddAssociatedContentPacksButton"
        addButton.accessibilityLabel = "Add Associated Content Packs"
        
        let addButtonImage = UIImage(systemName: "plus.circle")
        addButton.setImage(addButtonImage, for: .normal)
        
        contentPackListView = CollectionViewer(labelText: "Associated Content Packs:", button: addButton)
        layout.addArrangedSubview(contentPackListView)
        
        // NavBar
        saveButton = UIBarButtonItem(title: "Save", style: .done, target: self, action: #selector(save(_:)))
        saveButton.isEnabled = false
        saveButton.accessibilityLabel = "Save Deck Settings"
        saveButton.accessibilityIdentifier = "SaveButton"
        
        navigationItem.rightBarButtonItem = saveButton
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
...
