...
class CardBrowserViewController: UIViewController, UITableViewDelegate, NSFetchedResultsControllerDelegate {
    init (dependencyContainer dc: DependencyContainer) {
        dependencyContainer = dc
        flashCardService = dc.flashCardService
        
        tableView = UITableView(frame: .zero)
        tableView.accessibilityLabel = "Cards"
        tableView.accessibilityIdentifier = "CardsTable"
        
        super.init(nibName: nil, bundle: nil)
        hidesBottomBarWhenPushed = true
    }
        
...
        
        view = UIView(frame: .zero)
        view.backgroundColor = UIColor.systemBackground
        
        // Nav Bar
        let settingsButton = UIBarButtonItem(title: "Settings", style: .plain, target: self, action: #selector(settingsButton(_:)))
        settingsButton.accessibilityIdentifier = "SettingsButton"
        
        if deck != nil {
            settingsButton.accessibilityLabel = "Deck Settings"
        }
        else if contentPack != nil {
            settingsButton.accessibilityLabel = "Content Pack Settings"
...
        }
        
        tableView.translatesAutoresizingMaskIntoConstraints = false
        
        let toolbar = UIToolbar(frame: CGRect.infinite)  // CGRect.infinite fixes a weird autoresizing constraint bug
        toolbar.translatesAutoresizingMaskIntoConstraints = false
        toolbar.accessibilityIdentifier = "CardsToolbar"
        
        if deck == nil {
            let flexibleSpace = UIBarButtonItem(barButtonSystemItem: .flexibleSpace, target: self, action: nil)
            let newCardButton = UIBarButtonItem(barButtonSystemItem: .compose, target: self, action: #selector(newCardButton(_:)))
            newCardButton.accessibilityIdentifier = "NewCardButton"
            newCardButton.accessibilityLabel = "Create New Card"
            
            toolbar.items = [flexibleSpace, newCardButton]
        }
        
        view.addSubview(tableView)
...
